# MVPH_Inventory

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
inventory/: admin.py  apps.py  forms.py  models.py  notifications.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_alter_inventoryitem_subcategory.py  0003_recipe_inventoryitem_earmarked_for.py  0004_seed_recipes.py  0005_change_earmarked_to_m2m.py  0006_add_recipe_details.py  0007_add_audit_fields.py  0008_add_item_change_log.py  0009_add_manufacturer_field.py
inventory/templates/inventory/: item_confirm_delete.html  item_detail.html  item_form.html  item_list.html  recipe_confirm_delete.html  recipe_form.html  recipe_list.html
inventory/templates/inventory/emails/: stock_alert.html  stock_alert.txt
inventory/templates/inventory/partials/: adjust_stock_form.html  earmarked_select.html  item_history.html  item_row.html  item_table.html  quick_recipe_form.html  quick_recipe_success.html  recipe_popup.html  subcategory_select.html
static/css/: style.css
templates/: base.html
templates/registration/: login.html
tests/: conftest.py  test_forms.py  test_models.py  test_notifications.py  test_views.py
